[project]
name = "remote-twin-baker"
version = "0.2.0"  # Updated from 0.1.0
description = "A Python package for seamless remote task executions."
readme = "README.md"
authors = [{name = "YankeeMarco", email = "shabi@shabi.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "flask>=2.0", 
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pandas==2.2.3",
    "fastapi==0.115.0",
]

[project.optional-dependencies.dev]
dev = [
    "pytest>=7.2.0",
    "black>=23.0.0",
    "mypy>=1.0.0",  # 新增开发依赖
]

[project.urls]
Homepage = "https://github.com/YankeeMarco/remote-twin-baker"
Documentation = "https://github.com/YankeeMarco/remote-twin-baker#readme"
Repository = "https://github.com/YankeeMarco/remote-twin-baker"
Issues = "https://github.com/YankeeMarco/remote-twin-baker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["remote_twin_baker"]
exclude = [
    "/tests",
    "/nginx",
    "/requirements.txt",
    "/custom_requirements.txt",
    "/config.local.yaml",
]

[tool.isort]
profile = "black"
line_length = 128
known_third_party = ["flask", "requests", "numpy", "pandas", "pyyaml"]
known_first_party = ["remote_twin_baker"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
skip = []
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
import_heading_stdlibrary = "Standard Library"
import_heading_thirdparty = "Third Party Libraries"
import_heading_firstparty = "Local Libraries"
multi_line_output = 3

[tool.flake8]
max-line-length = 128
ignore = ["E501", "W503"]  # Remove F401 to allow unused import detection
exclude = ["*.egg", "*.egg-info", "__pycache__", "venv"]

[tool.black]
line-length = 128

[tool.autoflake]
remove_all_unused_imports = true
in_place = true
recursive = true
exclude = ["tests/*", "nginx/*", "__init__.py"]